--- a/Main/Index.html
+++ b/Main/Index.html
@@ -17,30 +17,42 @@
 </head>
 <body style="margin: 0;">
 
-<nav class="navbar navbar-expand-lg bg-dark navbar-dark navbar-light m-0">
-  <a class="navbar-brand px-3 mb-auto" href="../Home/main.html"> <img src="../img\HobihorsingLogo.png" alt="logo" width="55px" height="55px"> </a> 
-  <div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	<nav class="navbar navbar-expand-lg navbar-dark p-3 bg-danger" id="headerNav">
+    <div class="container-fluid">
+      <a class="navbar-brand d-block d-lg-none" href="#">
+        <img src="/GuitarShop/IMG/Guitarlogo1.png" height="80" />
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="">Home</a>
+  
+
+
+      <div class=" collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav mx-auto ">
+          <li class="nav-item">
+            <a class="nav-link mx-2 active" aria-current="page" href="#">page1</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">News</a>
+            <a class="nav-link mx-2" href="#">Page2</a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a class="nav-link mx-2" href="/GuitarShop/Main/Index.html">
+              <img src="/GuitarShop/IMG/Guitarlogo1.png" height="80" />
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Shop</a>
+            <a class="nav-link mx-2" href="#">Page3</a>
           </li>
+          
           <li class="nav-item">
-            <a class="nav-link" href="">About</a>
+              <a class="nav-link mx-2" href="/GuitarShop/About us/about.html">About</a>
           </li>
+          
+        </ul>
       </div>
     </div>
-</nav>
+  </nav>
 
 <div id="guitarDiv"></div>
 
