--- a/Main/Index.html
+++ b/Main/Index.html
@@ -31,7 +31,7 @@
       <div class=" collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav mx-auto ">
           <li class="nav-item">
-            <a class="nav-link mx-2 active" aria-current="page" href="#">page1</a>
+            <a class="nav-link mx-2 active" aria-current="page" href="/GuitarShop/Main/Index.html">Main</a>
           </li>
           <li class="nav-item">
             <a class="nav-link mx-2" href="#">Page2</a>
