--- a/Main/Index.html
+++ b/Main/Index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Main</title>
 
-  <script src="js/snap.svg-min.js"></script>
+  <script src=""></script>
   <script src="MainScript.js"></script>
   <link rel="stylesheet" href="MainStyle.css">
 
@@ -18,7 +18,7 @@
 <body style="margin: 0;">
 
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark navbar-light m-0">
-  <a class="navbar-brand px-3 mb-auto" href="../Home/main.html"> <img src="../img\HobihorsingLogo.png" alt="logo" width="55px" height="55px"> </a> 
+  <a class="navbar-brand px-3 mb-auto" href="../Home/main.html"> <img src="" alt="logo" width="55px" height="55px"> </a> 
   <div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,25 @@
     </div>
 </nav>
 
-<div id="guitarDiv"></div>
+
+<img src="..\Imgs\Guitar.png" id="demo" alt="">
+<img src="..\Imgs\IdleStingGif.gif" id="string1">
+
+
+<div class="string1">
+
+</div>
+
+
+
+
+
+
+
+
+
+  
+
 
 </body>
 </html>
