geu;houi g uoie tde

--- a/Main/aindex.html
+++ b/Main/aindex.html
@@ -8,36 +8,40 @@
 </head>
 <body>
 
+
+	
 <div class="guitar"> 
-	<div class="string-container">
+	<img class="guitar-image" src="..\IMG\image-removebg-preview (2).png" alt="Guitar Image">
+	
+	<div class="string-container" style="top: 50%;">
 		<div class="string">
 			<div class="string-text" >
 				<h5>Home</h5>
 			</div>
 		</div>
 	</div>
-	<div class="string-container">
+	<div class="string-container" style="top: 47%;">
 		<div class="string">
 			<div class="string-text" >
 				<h5>test</h5>
 			</div>
 		</div>
 	</div>
-	<div class="string-container">
+	<div class="string-container" style="top: 44%;">
 		<div class="string">
 			<div class="string-text" >
 				<h5>bebra</h5>
 			</div>
 		</div>
 	</div>
-	<div class="string-container">
+	<div class="string-container" style="top: 41%;">
 		<div class="string">
 			<div class="string-text" >
 				<h5>shrek</h5>
 			</div>
 		</div>
 	</div>
-	<div class="string-container">
+	<div class="string-container" style="top: 38%;">
 		<div class="string">
 			<div class="string-text" >
 				<h5>ahhahahahahahaha</h5>
